--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,19 @@
 API_VERSION=v1
 LOG_LEVEL=info
 
+#Database configurations
 DB_HOST=localhost
 DB_USERNAME=postgres
 DB_PASSWORD=root
 DB_NAME=talent2
 DB_PORT=5432
 DB_SYNCHRONIZE=false
+
+#Redis configurations
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
+#Tasks configurations
+TASKS_GAME_MONTHS_OLD_FOR_DELETION=18
+TASKS_GAME_START_MONTHS_OLD_FOR_DISSCOUNT=12
+TASKS_GAME_END_MONTHS_OLD_FOR_DISSCOUNT=18
