--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/config": "^1.1.3",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^5.1.5",
     "@nestjs/typeorm": "^8.0.2",
     "bull": "^3.29.3",
     "class-transformer": "^0.5.1",
@@ -34,6 +35,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.41"
   },
   "devDependencies": {
