--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - redis
     environment:
       - API_VERSION=${API_VERSION}
-      - NODE_ENV={NODE_ENV}
+      - NODE_ENV=${NODE_ENV}
       - DB_HOST=postgres
       - DB_USERNAME=${DB_USERNAME}
       - DB_PASSWORD=${DB_PASSWORD}
@@ -32,6 +32,6 @@ services:
       POSTGRES_DB: ${DB_NAME}
 
   redis:
-    image: "redis:alpine"
+    image: 'redis'
     ports:
-     - "${REDIS_PORT}:${REDIS_PORT}"
+      - 6379:6379
