--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ NODE_ENV=dev
 DB_HOST=localhost
 DB_USERNAME=postgres
 DB_PASSWORD=root
-DB_NAME=talent2
+DB_NAME=ultra
 DB_PORT=5432
 DB_SYNCHRONIZE=false
 
